# ring-buffer

./: .gitignore  CMakeLists.txt  DESIGN.md  LICENSE  README.md
.github/workflows/: ci.yml
bench/: CMakeLists.txt  barrier.hpp  bench_latency.cpp  bench_throughput.cpp  histogram.hpp  queue_adapters.hpp  thread_util.hpp  timer.hpp
bench/baselines/: mutex_queue.hpp
include/ringbuffer/: cache_line.hpp  memory_order.hpp  mpmc_ring_buffer.hpp  spsc_ring_buffer.hpp
results/2026-07-24-Sohams-MBP-4/: latency-packed.csv  latency-seqcst.csv  latency.csv  specs.txt  throughput-packed.csv  throughput-seqcst.csv  throughput.csv
scripts/: plot_results.py  run_benchmarks.sh  summarize_results.sh
tests/: CMakeLists.txt  test_histogram.cpp  test_mpmc.cpp  test_spsc.cpp  test_stress.cpp
